# MyIOC_inTDD_withGHC

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README_ArchDesign-State.md  README_ArchDesign.md  README_Glossary.md  README_LLMSE.md  README_RefAPIs.md  README_Specification.md  README_UseCase.md  README_UserGuide.md  UserGuide_CMD.md  UserGuide_DAT.md  UserGuide_EVT.md
.github/: README.md  copilot-instructions.md
.github/instructions/: UnitTestingGuide.instructions.md
.github/prompts/: MySystemMessagePrompt.md  WhoAmI.prompt.md
.github/workflows/: cmake-multi-platform.yml  macos-cmake-gtest.yml  ubuntu-cmake-gtest.yml
.prompts/: P_CodeReviewFunc.prompt  P_UT_designTestCase.prompt  P_UT_designTestCasePreliminary.prompt  P_UT_designTestCaseV1.prompt  P_UT_reviewUserStory.prompt
Doc/: CommonTermDefinitions.md  ErrorPrecedenceProposal.md  UserGuide_CMD.md  UserGuide_DAT.md  UserGuide_EVT.md  UserGuide_SRV.md
Doc/ContinueSessionLogs/: 20241014T220723_session.md  20241019T192005_session.md  20241019T192754_session.md  20241024T225021_session.md  20241102T165102_session.md
Doc/CopilotChatLogs/: @MermAId_sequenceDiagram_IOC_postEVT_inConlesMode.md  MultiFileEditing_UT_ServiceTypical_AC1_designTestCasePreliminary.md
Include/IOC/: IOC.h  IOC_CmdAPI.h  IOC_CmdDesc.h  IOC_CmdID.h  IOC_DatAPI.h  IOC_DatDesc.h  IOC_EvtAPI.h  IOC_EvtDesc.h  IOC_EvtID.h  IOC_Helpers.h  IOC_MsgDesc.h  IOC_Option.h  IOC_SrvAPI.h  IOC_SrvTypes.h  IOC_TestHooks.h  IOC_TypeEvtDesc.h  IOC_TypeEvtID.h  IOC_TypeOption.h  IOC_TypeSrv.h  IOC_Types.h  IOC_Types_EvtID.h
LLM/: CaTDD-UserGuide-PPT-ZH_CN.md  CaTDD-UserGuide-PPT.md  CaTDD_DesignPrompt.md  CaTDD_ImplTemplate.cxx  CaTDD_UserGuide.md
Source/: IOC.c  IOC_Capability.c  IOC_Command.c  IOC_Data.c  IOC_Event.c  IOC_Result.c  IOC_Service.c  _IOC.h  _IOC_ConetEvent.c  _IOC_ConetEvent.h  _IOC_ConlesEvent.c  _IOC_ConlesEvent.h  _IOC_ConlesEvent.md  _IOC_ConlesEventTest.cxx  _IOC_EvtDescQueue.c  _IOC_EvtDescQueue.h  _IOC_EvtDescQueue.md  _IOC_EvtDescQueueTest.cxx  _IOC_Logging.h  _IOC_SrvProto.md  _IOC_SrvProtoFifo.c  _IOC_SrvProtoFifo.md  _IOC_SrvProtoTCP.c  _IOC_Types.h
Test/: CMakeLists.txt  COMPLETE_COVERAGE_ACHIEVEMENT_REPORT.md  DataTypicalAutoAcceptUS1.cxx  IMPROVED_ErrorPrecedence_AnalysisReport.md  MISSION_ACCOMPLISHED_LinkIDFirst_Design.md  UT_CommandBoundaryTCP.cxx  UT_CommandEdgeTCP.cxx  UT_CommandFaultTCP.cxx  UT_CommandMisuseTCP.cxx  UT_CommandState.h  UT_CommandStateTCP.cxx  UT_CommandStateUS1.cxx  UT_CommandStateUS2.cxx  UT_CommandStateUS3.cxx  UT_CommandStateUS4.cxx  UT_CommandStateUS5.cxx  UT_CommandTypical.cxx  UT_CommandTypicalAutoAccept.cxx  UT_CommandTypicalAutoAcceptTCP.cxx  UT_CommandTypicalAutoCloseTCP.cxx  UT_CommandTypicalTCP.cxx  UT_CommandTypicalWaitAck.cxx  UT_CommandTypicalWaitAckTCP.cxx  UT_ConetEventState.cxx  UT_ConlesEventASync.cxx  UT_ConlesEventCapabilty.cxx  UT_ConlesEventConcurrency.cxx  UT_ConlesEventConcurrencyASync.cxx  UT_ConlesEventConcurrencyNonBlock.cxx  UT_ConlesEventDemoLiCam.cxx  UT_ConlesEventDemoLiveCam.cxx  UT_ConlesEventDemoLiveCam.md  UT_ConlesEventMayBlock.cxx  UT_ConlesEventMayBlock.md  UT_ConlesEventMisuse.cxx  UT_ConlesEventNonBlock.cxx  UT_ConlesEventNonBlock.md  UT_ConlesEventRobustness.cxx  UT_ConlesEventState.cxx  UT_ConlesEventState.md  (+96 more)
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile
_codeql_build_dir/Test/: CTestTestfile.cmake  DataTypicalAutoAcceptUS1  DataTypicalAutoAcceptUS2  Makefile  UT_CommandStateUS1  UT_CommandStateUS2  UT_CommandStateUS3  UT_CommandStateUS4  UT_CommandStateUS5  UT_CommandTypical  UT_CommandTypicalAutoAccept  UT_CommandTypicalWaitAck  UT_ConlesEventASync  UT_ConlesEventCapabilty  UT_ConlesEventDemoLiveCam  UT_ConlesEventMayBlock  UT_ConlesEventMisuse  UT_ConlesEventNonBlock  UT_ConlesEventState  UT_ConlesEventSync  UT_ConlesEventTimeout  UT_ConlesEventTypical  UT_ConlesEventUseBoundary  UT_DataBoundaryUS1  UT_DataBoundaryUS2  UT_DataBoundaryUS3  UT_DataBoundaryUS4AC1  UT_DataBoundaryUS4AC2  UT_DataBoundaryUS4AC3  UT_DataBoundaryUS4AC4  UT_DataBoundaryUS4AC5  UT_DataBoundaryUS5  UT_DataCapability  UT_DataPerformanceUS1  UT_DataPerformanceUS2  UT_DataStateUS1  UT_DataStateUS2  UT_DataStateUS3  UT_DataStateUS4  UT_DataStateUS5  (+21 more)
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile
build_test/Test/: CTestTestfile.cmake  Makefile
